k8s/overlays/prod/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-alias: scpo-experts-search.sciencespo.fr
spec:
  rules:
  - host: experts-search.sciencespo.fr
    http:
      paths:
        - path: /
          backend:
            serviceName: client
            servicePort: 80
